--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI = mongodb+srv://sachinsingh605092_db_user:<db_password>@cluster2.duznexn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster2
+MONGODB_URI = mongodb+srv://sachinsingh605092_db_user:Sachin%4082@cluster2.duznexn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster2
 PORT=5000
 NODE_ENV=development
